--- a/TechOnStudy_CMS/MasterPageSms.Master
+++ b/TechOnStudy_CMS/MasterPageSms.Master
@@ -63,21 +63,12 @@
         <!-- Site wrapper -->
         <div class="wrapper">
             <header class="main-header">
-                <a href="index.html" class="logo">
-                    <!-- Logo -->
-                    <span class="logo-mini">
-                        <img src="assets/dist/img/mini-logo.png" alt="">
-                    </span>
-                    <span class="logo-lg">
-                        <img src="assets/dist/img/logo.png" alt="">
-                    </span>
-                </a>
+                 
                 <!-- Header Navbar -->
                 <nav class="navbar navbar-expand py-0">
                     <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
                         <!-- Sidebar toggle button-->
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="pe-7s-angle-left-circle"></span>
+                       <img src="assets/Untitled-1.png"  width="300" height="80"   alt="user" />
                     </a>
                     <!-- searchbar-->
 
@@ -88,7 +79,7 @@
                             <!-- User -->
                             <li class="nav-item dropdown dropdown-user">
                                 <a class="nav-link" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <img src="assets/dist/img/avatar5.png" class="rounded-circle" width="50" height="50" alt="user"></a>
+                                    <img src="assets/dist/img/avatar5.png" class="rounded-circle" width="50" height="50" alt="user" /></a>
 
                                 <div class="dropdown-menu drop_down">
                                     <div class="menus">
@@ -100,81 +91,7 @@
                     </div>
                 </nav>
             </header>
-            <!-- =============================================== -->
-            <!-- Left side column. contains the sidebar -->
-            <aside class="main-sidebar">
-                <!-- sidebar -->
-                <div class="sidebar">
-                    <!-- sidebar menu -->
-                    <ul class="sidebar-menu">
-                        <li class="active">
-                            <a href="Dashboard.aspx"><i class="fa fa-tachometer"></i><span>Dashboard</span>
-                                <span class="pull-right-container"></span>
-                            </a>
-                        </li>
-                        <li class="treeview">
-                            <a href="addcategory.aspx"><i class="fa fa-users"></i><span>Add Category</span></a>
-                        </li>
-                        <li class="treeview">
-                            <a href="add-category-images.aspx"><i class="fa fa-users"></i><span>Category Imgaes Upload</span></a>
-                        </li>
-
-                        <li class="treeview">
-                            <a href="add-category-attribute.aspx"><i class="fa fa-users"></i><span>Category Attribute Setting</span></a>
-                        </li>
-
-                        <li class="treeview">
-                            <a href="addsubcategory.aspx"><i class="fa fa-users"></i><span>Add Sub Category</span></a>
-                        </li>
-                        <li class="treeview">
-                            <a href="AddProductNew.aspx"><i class="fa fa-users"></i><span>Add Product</span></a>
-                        </li>
-
-                        <li class="treeview">
-                            <a href="productlist.aspx"><i class="fa fa-users"></i><span>Product List</span></a>
-                        </li>
-
-                        <li class="treeview">
-                            <a href="addproductimages.aspx"><i class="fa fa-users"></i><span>Product Imgaes Upload</span></a>
-                        </li>
-
-
-
-                        <li class="treeview">
-                            <a href="client_list_details.aspx?type=b2b"><i class="fa fa-users"></i><span>B2B Client Details</span></a>
-                        </li>
-                        <li class="treeview">
-                            <a href="client_list_details.aspx?type=b2c"><i class="fa fa-users"></i><span>B2C Client Details</span></a>
-                        </li>
-
-                        <li class="treeview">
-                            <a href="#">
-                                <i class="fa fa-shopping-basket"></i><span>Client Orders</span>
-                                <span class="pull-right-container">
-                                    <i class="fa fa-angle-left float-right"></i>
-                                </span>
-                            </a>
-                            <ul class="treeview-menu">
-                                <li><a href="client-order-list.aspx">Client Order List</a></li>                                
-                            </ul>
-                        </li>
-
-                        <%--  <li class="treeview">
-                        <a href="addnumbers.aspx"><i class="fa fa-users"></i><span>Add Product</span></a>
-                    </li>--%>
-                        <%-- <li class="treeview">
-                        <a href="mstdailydraw.aspx"><i class="fa fa-users"></i><span>Draw Declare</span></a>
-                    </li>
-
-                     <li class="treeview">
-                        <a href="mstdailydraw_report.aspx"><i class="fa fa-users"></i><span>Draw Declared Report</span></a>
-                    </li>--%>
-                    </ul>
-                </div>
-                <!-- /.sidebar -->
-            </aside>
-            <!-- =============================================== -->
-
+             
 
             <%-- <asp:ScriptManager ID="ScriptManager1" runat="server">
             </asp:ScriptManager>
