--- a/TechOnStudy_CMS/MasterPageSms.Master
+++ b/TechOnStudy_CMS/MasterPageSms.Master
@@ -81,9 +81,10 @@
                             <!-- User -->
                             <li class="nav-item dropdown dropdown-user">
                                     <div class="menus" style="color:wheat;">
-                                        <p class="mb-0"><strong class="text-warning">Address : </strong>3B,4th Flower, Metro Station, Jaipur 302013</p>
+                                        <p class="mb-0"><strong class="text-warning">Address : </strong>3B,4th Floor, Croma Centre, Pusa Road, Near Karol Bagh Metro, New Delhi-110005</p>
                                            <p class="mb-0"><strong class="text-warning">Phone No. : </strong> +91 9773636100 </p> 
                                          <p class="mb-0"><strong class="text-warning">Email : </strong> info@toppersias.in </p> 
+                                        <p class="mb-0"><strong class="text-warning">Website : </strong> www.toppersias.in </p> 
                                     </div>
 
                                
