--- a/TechOnStudy_CMS/PrintAdmissionReport.rdlc
+++ b/TechOnStudy_CMS/PrintAdmissionReport.rdlc
@@ -122,9 +122,9 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox42</rd:DefaultName>
-        <Top>2.95361in</Top>
+        <Top>2.91195in</Top>
         <Left>4.25222in</Left>
-        <Height>0.375in</Height>
+        <Height>0.33333in</Height>
         <Width>1.14361in</Width>
         <ZIndex>3</ZIndex>
         <Style>
@@ -292,7 +292,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox42</rd:DefaultName>
-        <Top>5.23486in</Top>
+        <Top>5.35986in</Top>
         <Left>0.09024in</Left>
         <Height>0.375in</Height>
         <Width>1.37848in</Width>
@@ -326,7 +326,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox42</rd:DefaultName>
-        <Top>5.9468in</Top>
+        <Top>6.0718in</Top>
         <Left>0.10413in</Left>
         <Height>0.25in</Height>
         <Width>1.37848in</Width>
@@ -360,7 +360,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox42</rd:DefaultName>
-        <Top>5.65513in</Top>
+        <Top>5.78013in</Top>
         <Left>0.10413in</Left>
         <Height>0.25in</Height>
         <Width>1.37848in</Width>
@@ -394,7 +394,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox42</rd:DefaultName>
-        <Top>5.65513in</Top>
+        <Top>5.78013in</Top>
         <Left>4.32413in</Left>
         <Height>0.25in</Height>
         <Width>1.14361in</Width>
@@ -428,7 +428,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox42</rd:DefaultName>
-        <Top>5.94319in</Top>
+        <Top>6.06819in</Top>
         <Left>4.32413in</Left>
         <Height>0.25in</Height>
         <Width>1.14361in</Width>
@@ -462,7 +462,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox42</rd:DefaultName>
-        <Top>7.00235in</Top>
+        <Top>7.12735in</Top>
         <Left>4.33926in</Left>
         <Height>0.25in</Height>
         <Width>1.12848in</Width>
@@ -496,7 +496,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox42</rd:DefaultName>
-        <Top>6.68291in</Top>
+        <Top>6.80791in</Top>
         <Left>4.32537in</Left>
         <Height>0.25in</Height>
         <Width>1.14237in</Width>
@@ -530,7 +530,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox42</rd:DefaultName>
-        <Top>6.68291in</Top>
+        <Top>6.80791in</Top>
         <Left>0.11455in</Left>
         <Height>0.25in</Height>
         <Width>1.37848in</Width>
@@ -564,7 +564,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox42</rd:DefaultName>
-        <Top>7.00235in</Top>
+        <Top>7.12735in</Top>
         <Left>0.11455in</Left>
         <Height>0.25in</Height>
         <Width>1.37848in</Width>
@@ -611,7 +611,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox42</rd:DefaultName>
-        <Top>6.25235in</Top>
+        <Top>6.37735in</Top>
         <Left>0.10413in</Left>
         <Height>0.38889in</Height>
         <Width>1.37849in</Width>
@@ -815,7 +815,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox42</rd:DefaultName>
-        <Top>4.25216in</Top>
+        <Top>4.37716in</Top>
         <Left>0.07636in</Left>
         <Height>0.25in</Height>
         <Width>1.37848in</Width>
@@ -883,7 +883,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox42</rd:DefaultName>
-        <Top>4.57161in</Top>
+        <Top>4.69661in</Top>
         <Left>0.07636in</Left>
         <Height>0.25in</Height>
         <Width>1.37848in</Width>
@@ -917,7 +917,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox42</rd:DefaultName>
-        <Top>4.84938in</Top>
+        <Top>4.97438in</Top>
         <Left>4.32413in</Left>
         <Height>0.25in</Height>
         <Width>1.12848in</Width>
@@ -951,7 +951,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox42</rd:DefaultName>
-        <Top>4.86327in</Top>
+        <Top>4.98827in</Top>
         <Left>0.07289in</Left>
         <Height>0.25in</Height>
         <Width>1.37848in</Width>
@@ -985,7 +985,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox42</rd:DefaultName>
-        <Top>4.57161in</Top>
+        <Top>4.69661in</Top>
         <Left>4.31149in</Left>
         <Height>0.25in</Height>
         <Width>1.12848in</Width>
@@ -1087,7 +1087,7 @@
         <Top>2.34251in</Top>
         <Left>1.46278in</Left>
         <Height>0.25in</Height>
-        <Width>2.33778in</Width>
+        <Width>1.98361in</Width>
         <ZIndex>31</ZIndex>
         <Style>
           <Border>
@@ -1216,7 +1216,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>PA_LINE</rd:DefaultName>
-        <Top>5.24875in</Top>
+        <Top>5.37375in</Top>
         <Left>1.53816in</Left>
         <Height>0.36111in</Height>
         <Width>6.25223in</Width>
@@ -1249,7 +1249,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>PA_CITY_TOWN</rd:DefaultName>
-        <Top>5.94319in</Top>
+        <Top>6.06819in</Top>
         <Left>1.5347in</Left>
         <Height>0.25in</Height>
         <Width>2.70388in</Width>
@@ -1282,7 +1282,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>PA_CountryName</rd:DefaultName>
-        <Top>5.66541in</Top>
+        <Top>5.79041in</Top>
         <Left>1.5347in</Left>
         <Height>0.25in</Height>
         <Width>2.70388in</Width>
@@ -1348,7 +1348,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>PA_CityName</rd:DefaultName>
-        <Top>5.65513in</Top>
+        <Top>5.78013in</Top>
         <Left>5.49552in</Left>
         <Height>0.25in</Height>
         <Width>2.33653in</Width>
@@ -1381,7 +1381,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>CA_LINE</rd:DefaultName>
-        <Top>6.26263in</Top>
+        <Top>6.38763in</Top>
         <Left>1.5347in</Left>
         <Height>0.37861in</Height>
         <Width>6.25569in</Width>
@@ -1414,7 +1414,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>CA_CITY_TOWN</rd:DefaultName>
-        <Top>7.00235in</Top>
+        <Top>7.12735in</Top>
         <Left>1.5347in</Left>
         <Height>0.25in</Height>
         <Width>2.70388in</Width>
@@ -1447,7 +1447,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>CA_CountryName</rd:DefaultName>
-        <Top>6.68291in</Top>
+        <Top>6.80791in</Top>
         <Left>1.53816in</Left>
         <Height>0.25in</Height>
         <Width>2.70388in</Width>
@@ -1480,7 +1480,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>CA_StateName</rd:DefaultName>
-        <Top>5.94319in</Top>
+        <Top>6.06819in</Top>
         <Left>5.49552in</Left>
         <Height>0.25in</Height>
         <Width>2.33653in</Width>
@@ -1513,7 +1513,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>CA_CityName</rd:DefaultName>
-        <Top>6.68291in</Top>
+        <Top>6.80791in</Top>
         <Left>5.49552in</Left>
         <Height>0.25in</Height>
         <Width>2.33653in</Width>
@@ -1579,7 +1579,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>CName</rd:DefaultName>
-        <Top>7.00235in</Top>
+        <Top>7.12735in</Top>
         <Left>5.49552in</Left>
         <Height>0.25in</Height>
         <Width>2.33653in</Width>
@@ -1711,7 +1711,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>QUALIFICATIONNAME</rd:DefaultName>
-        <Top>4.26605in</Top>
+        <Top>4.39105in</Top>
         <Left>1.51039in</Left>
         <Height>0.25in</Height>
         <Width>2.70388in</Width>
@@ -1777,7 +1777,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>NAME_OF_COLLEGE</rd:DefaultName>
-        <Top>4.57161in</Top>
+        <Top>4.69661in</Top>
         <Left>1.51039in</Left>
         <Height>0.25in</Height>
         <Width>2.70388in</Width>
@@ -1810,7 +1810,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>PASSING_YEAR</rd:DefaultName>
-        <Top>4.8355in</Top>
+        <Top>4.9605in</Top>
         <Left>5.469in</Left>
         <Height>0.25in</Height>
         <Width>2.33653in</Width>
@@ -1845,7 +1845,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>MARKS_PER</rd:DefaultName>
-        <Top>4.86327in</Top>
+        <Top>4.98827in</Top>
         <Left>1.51039in</Left>
         <Height>0.25in</Height>
         <Width>2.70388in</Width>
@@ -1911,7 +1911,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>OPTIONAL_SUBJECT_CSENAME1</rd:DefaultName>
-        <Top>4.57161in</Top>
+        <Top>4.69661in</Top>
         <Left>5.46775in</Left>
         <Height>0.25in</Height>
         <Width>2.33529in</Width>
@@ -1946,9 +1946,9 @@
         <Value>=First(Fields!SIGNATURE.Value, "DataSet1")</Value>
         <Sizing>Fit</Sizing>
         <Top>7.93948in</Top>
-        <Left>5.42486in</Left>
+        <Left>5.67486in</Left>
         <Height>0.93371in</Height>
-        <Width>2.36553in</Width>
+        <Width>2.11553in</Width>
         <ZIndex>58</ZIndex>
         <Style>
           <Border>
@@ -2036,7 +2036,7 @@
         </Style>
       </Textbox>
       <Line Name="Line1">
-        <Top>5.16542in</Top>
+        <Top>5.29042in</Top>
         <Height>0in</Height>
         <Width>7.74625in</Width>
         <ZIndex>61</ZIndex>
@@ -2106,8 +2106,8 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>dob</rd:DefaultName>
-        <Top>2.03695in</Top>
-        <Left>3.80056in</Left>
+        <Top>2.02307in</Top>
+        <Left>4.84721in</Left>
         <Height>0.25in</Height>
         <Width>1in</Width>
         <ZIndex>64</ZIndex>
@@ -2136,10 +2136,10 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>UpscRollNo</rd:DefaultName>
-        <Top>4.22439in</Top>
-        <Left>5.45386in</Left>
+        <Top>2.34251in</Top>
+        <Left>4.59571in</Left>
         <Height>0.25in</Height>
-        <Width>2.33653in</Width>
+        <Width>1.51361in</Width>
         <ZIndex>65</ZIndex>
         <Style>
           <Border>
@@ -2170,8 +2170,8 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox42</rd:DefaultName>
-        <Top>2.03695in</Top>
-        <Left>2.40695in</Left>
+        <Top>2.02307in</Top>
+        <Left>3.4536in</Left>
         <Height>0.25in</Height>
         <Width>1.39361in</Width>
         <ZIndex>66</ZIndex>
@@ -2204,8 +2204,8 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox42</rd:DefaultName>
-        <Top>4.22439in</Top>
-        <Left>4.31149in</Left>
+        <Top>2.34251in</Top>
+        <Left>3.45334in</Left>
         <Height>0.25in</Height>
         <Width>1.12972in</Width>
         <ZIndex>67</ZIndex>
@@ -2238,7 +2238,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox42</rd:DefaultName>
-        <Top>8.13542in</Top>
+        <Top>8.38542in</Top>
         <Left>0.06788in</Left>
         <Height>0.25in</Height>
         <Width>0.6389in</Width>
@@ -2272,7 +2272,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox42</rd:DefaultName>
-        <Top>8.45486in</Top>
+        <Top>8.70486in</Top>
         <Left>0.06788in</Left>
         <Height>0.25in</Height>
         <Width>0.6389in</Width>
@@ -2304,7 +2304,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>CreatedDatetime</rd:DefaultName>
-        <Top>8.13542in</Top>
+        <Top>8.38542in</Top>
         <Left>0.72067in</Left>
         <Height>0.25in</Height>
         <Width>1.94792in</Width>
@@ -2334,7 +2334,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>CA_CityName1</rd:DefaultName>
-        <Top>8.45486in</Top>
+        <Top>8.70486in</Top>
         <Left>0.70678in</Left>
         <Height>0.25in</Height>
         <Width>1.96181in</Width>
@@ -2371,9 +2371,9 @@
         </Paragraphs>
         <rd:DefaultName>Textbox9</rd:DefaultName>
         <Top>1.08208in</Top>
-        <Left>2.33333in</Left>
+        <Left>2.94791in</Left>
         <Height>0.25in</Height>
-        <Width>3.0625in</Width>
+        <Width>2.24973in</Width>
         <ZIndex>72</ZIndex>
         <Style>
           <Border>
@@ -2401,8 +2401,65 @@
           </Border>
         </Style>
       </Image>
+      <Textbox Name="Textbox3">
+        <CanGrow>true</CanGrow>
+        <KeepTogether>true</KeepTogether>
+        <Paragraphs>
+          <Paragraph>
+            <TextRuns>
+              <TextRun>
+                <Value>Signature of Candidate</Value>
+                <Style>
+                  <FontSize>8pt</FontSize>
+                  <FontWeight>Bold</FontWeight>
+                </Style>
+              </TextRun>
+            </TextRuns>
+            <Style>
+              <TextAlign>Center</TextAlign>
+            </Style>
+          </Paragraph>
+        </Paragraphs>
+        <rd:DefaultName>Textbox3</rd:DefaultName>
+        <Top>8.87319in</Top>
+        <Left>5.67486in</Left>
+        <Height>0.25in</Height>
+        <Width>2.12817in</Width>
+        <ZIndex>74</ZIndex>
+        <Style>
+          <Border>
+            <Style>None</Style>
+          </Border>
+          <PaddingLeft>2pt</PaddingLeft>
+          <PaddingRight>2pt</PaddingRight>
+          <PaddingTop>2pt</PaddingTop>
+          <PaddingBottom>2pt</PaddingBottom>
+        </Style>
+      </Textbox>
+      <Line Name="Line4">
+        <Top>4.26605in</Top>
+        <Height>0in</Height>
+        <Width>7.83205in</Width>
+        <ZIndex>75</ZIndex>
+        <Style>
+          <Border>
+            <Style>Solid</Style>
+          </Border>
+        </Style>
+      </Line>
+      <Line Name="Line5">
+        <Top>7.41902in</Top>
+        <Height>0in</Height>
+        <Width>7.89649in</Width>
+        <ZIndex>76</ZIndex>
+        <Style>
+          <Border>
+            <Style>Solid</Style>
+          </Border>
+        </Style>
+      </Line>
     </ReportItems>
-    <Height>8.95833in</Height>
+    <Height>9.17708in</Height>
     <Style />
   </Body>
   <Width>7.94667in</Width>
